crates/alder-can/src/snapshots/alder_can__canonicalize__tests__invalid_derive_arguments_are_structured-4.snap
---
source: crates/alder-can/src/canonicalize.rs
expression: "can_error(\"#[derive(Eq)]\\nenum Callback { Callback(fn() -> ()) }\")"
---
[
    Error {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 14,
            },
        },
        kind: Attribute(
            InvalidDerive {
                reason: "function-valued fields cannot derive Eq",
            },
        ),
    },
]
