crates/alder-can/src/snapshots/alder_can__canonicalize__tests__invalid_derive_arguments_are_structured.snap
---
source: crates/alder-can/src/canonicalize.rs
expression: "can_error(\"#[derive(Missing)]\\nenum Status { Ready }\")"
---
[
    Error {
        region: Region {
            start: Position {
                line: 1,
                column: 10,
            },
            end: Position {
                line: 1,
                column: 17,
            },
        },
        kind: Attribute(
            InvalidDerive {
                reason: "unknown built-in derive",
            },
        ),
    },
]
