crates/alder-can/src/snapshots/alder_can__canonicalize__tests__lambda_does_not_inherit_async_permission.snap
---
source: crates/alder-can/src/canonicalize.rs
description: "async fn wait() { () -> Task.sleep(1).await }"
---
[
    Error {
        region: Region {
            start: Position {
                line: 1,
                column: 25,
            },
            end: Position {
                line: 1,
                column: 44,
            },
        },
        kind: Expr(
            AwaitOutsideAsync,
        ),
    },
]
