crates/alder-can/src/snapshots/alder_can__canonicalize__tests__loop_control_errors-2.snap
---
source: crates/alder-can/src/canonicalize.rs
expression: "can_error(\"fn skip() { continue }\")"
---
[
    Error {
        region: Region {
            start: Position {
                line: 1,
                column: 13,
            },
            end: Position {
                line: 1,
                column: 21,
            },
        },
        kind: Stmt(
            ContinueOutsideLoop,
        ),
    },
]
