crates/alder-can/src/snapshots/alder_can__canonicalize__tests__loop_control_errors.snap
---
source: crates/alder-can/src/canonicalize.rs
expression: "can_error(\"fn stop() { break }\")"
---
[
    Error {
        region: Region {
            start: Position {
                line: 1,
                column: 13,
            },
            end: Position {
                line: 1,
                column: 18,
            },
        },
        kind: Stmt(
            BreakOutsideLoop,
        ),
    },
]
