crates/alder-can/src/snapshots/alder_can__canonicalize__tests__pin_cannot_reference_a_new_binding_in_its_own_pattern.snap
---
source: crates/alder-can/src/canonicalize.rs
description: "fn same(input: (Number, Number)) Bool {\n    match input { (captured, ^captured) => true, _ => false }\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 2,
                column: 31,
            },
            end: Position {
                line: 2,
                column: 39,
            },
        },
        kind: Expr(
            Name(
                Unknown {
                    namespace: Value,
                    qualifier: None,
                    name: "captured",
                    suggestions: [],
                },
            ),
        ),
    },
]
