crates/alder-can/src/snapshots/alder_can__canonicalize__tests__pin_in_lambda_parameter_inside_match_is_not_a_match_pattern.snap
---
source: crates/alder-can/src/canonicalize.rs
description: "fn same(input: Number) {\n    match input { expected => (^expected) -> true }\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 2,
                column: 32,
            },
            end: Position {
                line: 2,
                column: 41,
            },
        },
        kind: Pattern(
            PinOutsideMatch,
        ),
    },
]
