crates/alder-can/src/snapshots/alder_can__canonicalize__tests__pin_in_let_inside_match_is_not_a_match_pattern.snap
---
source: crates/alder-can/src/canonicalize.rs
description: "fn same(input: Number) Bool {\n    match input {\n        expected => {\n            let ^expected = input\n            true\n        }\n    }\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 4,
                column: 17,
            },
            end: Position {
                line: 4,
                column: 26,
            },
        },
        kind: Pattern(
            PinOutsideMatch,
        ),
    },
]
