crates/alder-can/src/snapshots/alder_can__canonicalize__tests__plain_function_cannot_await.snap
---
source: crates/alder-can/src/canonicalize.rs
description: "import task\nfn wait() { task.sleep(1).await }"
---
[
    Error {
        region: Region {
            start: Position {
                line: 2,
                column: 13,
            },
            end: Position {
                line: 2,
                column: 32,
            },
        },
        kind: Expr(
            AwaitOutsideAsync,
        ),
    },
]
