crates/alder-can/src/snapshots/alder_can__canonicalize__tests__provider_reads_before_use_are_not_implicitly_bound.snap
---
source: crates/alder-can/src/canonicalize.rs
description: "type Session = { user: String }\nfn read() { let before = Session.user\nuse Session\nbefore }"
---
[
    Error {
        region: Region {
            start: Position {
                line: 2,
                column: 26,
            },
            end: Position {
                line: 2,
                column: 33,
            },
        },
        kind: Pattern(
            Name(
                Unknown {
                    namespace: Constructor,
                    qualifier: None,
                    name: "Session",
                    suggestions: [],
                },
            ),
        ),
    },
]
