crates/alder-can/src/snapshots/alder_can__canonicalize__tests__repeated_bound_clauses_still_reject_distinct_associated_candidates.snap
---
source: crates/alder-can/src/canonicalize.rs
description: "trait First[a] { type Item }\ntrait Second[a] { type Item }\nfn bad(value: a) where a: First, a.Item == Number, a: Second { value }\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 3,
                column: 36,
            },
            end: Position {
                line: 3,
                column: 40,
            },
        },
        kind: Type(
            AmbiguousAssocType {
                name: "Item",
                traits: [
                    TraitId(
                        QualifiedName {
                            module: ModuleId {
                                package: Application,
                                path: [],
                            },
                            name: "First",
                        },
                    ),
                    TraitId(
                        QualifiedName {
                            module: ModuleId {
                                package: Application,
                                path: [],
                            },
                            name: "Second",
                        },
                    ),
                ],
            },
        ),
    },
]
